[package]
name = "md5check"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
md5 = "0.7.0"
tokio = { version = "1.36.0", features = ["fs", "io-util", "rt", "macros"] }
clap = { version = "4.5", features = ["derive","color","usage"] }

[profile.release]
strip = "symbols"
lto = "fat"
